Improve gulp and add status classes to property ui elements

--- a/lib/ui/style.css
+++ b/lib/ui/style.css
@@ -11,6 +11,10 @@
     background-color: yellow;
 }
 
-.xyz-waiting{
-    color:grey;
+.xyz-waiting {
+    color: grey;
+}
+
+.xyz-status-400, .xyz-status-403, .xyz-status-404, .xyz-status-500 {
+    color: red;
 }
