--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -4,8 +4,17 @@ html, body {
     font-family: sans-serif;
 }
 
+table.xyz-item, table.xyz-list {
+    border: 1px solid lightgrey;
+    margin-bottom: 5px;
+}
+
+table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
+    background: rgba(155, 155, 155, 0.2);
+}
+
 .xyz-list-header, .xyz-item-header {
-    background-color: blue;
+    background-color: darkslateblue;
     color: white;
 }
 
@@ -36,12 +45,12 @@ html, body {
     height: 30px;
     background-color: white;
     color: black;
-    border-bottom: 1px solid rgb(230, 230, 230) ;
+    border-bottom: 1px solid rgb(230, 230, 230);
     font-size: xx-large;
 }
 
 .xyz-page-navigation {
-    padding-top:20px;
+    padding-top: 20px;
     height: calc(100vh - 100px);
     width: 200px;
     background-color: rgb(247, 247, 247);
@@ -55,7 +64,7 @@ html, body {
 
 .xyz-page-navigation li {
     padding-bottom: 40px;
-    color:rgb(100,100,100);
+    color: rgb(100, 100, 100);
 }
 
 .xyz-page-navigation a {
@@ -64,16 +73,16 @@ html, body {
 }
 
 a.xyz-page-navigation-current {
-    color:  darkgoldenrod;
+    color: darkgoldenrod;
 }
 
-li.xyz-page-navigation-depth-0{
+li.xyz-page-navigation-depth-0 {
     font-weight: bold;
-    color:black;
+    color: black;
 }
 
 .xyz-page-content {
-    padding:50px;
+    padding: 50px;
     width: calc(100vw - 300px);
     height: calc(100vh - 200px);
     display: inline-block;
