Add ui validation

--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -45,6 +45,10 @@ STATUS
     color: red;
 }
 
+.xyz-invalid-content {
+    color: red;
+}
+
 /* ====================================================================================================
 PAGE
 ==================================================================================================== */
