--- a/custom/main/content/style.css
+++ b/custom/main/content/style.css
@@ -14,8 +14,12 @@ html,body{
     width:100%;
     height:100%;
 }
-#header{
+.header{
     color:white;
     height:2em;
     background-color:red;
+}
+
+.header td:nth-child(2){
+    text-align: right;
 }
