--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -120,3 +120,16 @@ FILE
     background-color: white;
     padding: 10px;
 }
+
+/* ====================================================================================================
+LOGIN
+==================================================================================================== */
+
+.xyz-login a {
+    color: blue;
+    cursor: pointer;
+    margin:5px;
+}
+.xyz-login a:hover{
+    text-decoration: underline;
+}
