--- a/custom/main/content/style.css
+++ b/custom/main/content/style.css
@@ -1,25 +1,54 @@
-html,body{
-    padding:0;
-    margin:0;
-}
-#sources {
-    background-color: lightpink;
-}
-#facts {
-    background-color: lightgreen;
-}
-#main{
-    padding:0;
-    margin:0;
-    width:100%;
-    height:100%;
-}
-.header{
-    color:white;
-    height:2em;
-    background-color:red;
+html, body {
+    padding: 0;
+    margin: 0;
 }
 
-.header td:nth-child(2){
+#main tr.header td {
+    font-weight: normal;
+    color: black;
+    padding: 15px;
+    height: 2em;
+    background-color: white;
+    border-bottom: gray solid 1px;
+}
+h1 {
+    font-size: 1.4em;
+    font-weight: normal;
+}
+
+h3 {
+    font-size: 1em;
+    font-weight: bold;
+}
+
+#main tr td#sources {
+    padding: 5px;
+    border-right: white solid 1px;
+    background-color: rgb(240, 240, 240);
+}
+
+#main tr td#facts {
+    padding: 5px;
+    border-left: white solid 1px;
+    background-color: rgb(240, 240, 240);
+}
+
+#main {
+    border-collapse: collapse;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#main td {
+    padding: 0;
+}
+
+.header td:nth-child(2) {
     text-align: right;
+}
+
+#view {
+    background-color: darkgray;
 }
