--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -4,20 +4,20 @@ html, body {
     font-family: sans-serif;
 }
 
-input[type='submit']{
-    background-color: rgb(76,175,80);
+input[type='submit'] {
+    background-color: rgb(76, 175, 80);
     border: none;
     border-radius: 5px;
     color: white;
     padding: 5px;
-    float:right;
+    float: right;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
 }
 
-input[type='submit']:hover{
-    background-color: rgb(106,205,110)
+input[type='submit']:hover {
+    background-color: rgb(106, 205, 110)
 }
 
 /* ====================================================================================================
@@ -26,7 +26,7 @@ DISPLAYS
 table.xyz-create, table.xyz-item, table.xyz-list {
     /*border: 1px solid lightgrey;
     margin-bottom: 5px;*/
-    padding:0;
+    padding: 0;
     border-collapse: collapse;
 }
 
@@ -38,8 +38,9 @@ table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xy
     background-color: darkslateblue;
     color: white;
 }
-.xyz-list, .xyz-item{
-    width:100%;
+
+.xyz-list, .xyz-item {
+    width: 100%;
 }
 
 .xyz-list-item {
@@ -54,6 +55,45 @@ table.xyz-list tr.xyz-list-selected {
     background-color: yellow;
 }
 
+div.xyz-timeline-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+div.xyz-timeline-node {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-connector {
+    position: absolute;
+    width: 100px;
+    height: 4px;
+    background-color: green;
+}
+
+div.xyz-timeline-label {
+    position: absolute;
+    padding:10px;
+    color:white;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-line {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    top:50%;
+    left:50%;
+    height: 100%;
+    width:2px;
+    background-color: black;
+}
 /* ====================================================================================================
 STATUS
 ==================================================================================================== */
@@ -149,8 +189,9 @@ LOGIN
 .xyz-login a {
     color: blue;
     cursor: pointer;
-    margin:5px;
+    margin: 5px;
 }
-.xyz-login a:hover{
+
+.xyz-login a:hover {
     text-decoration: underline;
 }
