--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -10,7 +10,6 @@ input[type='submit'] {
     border-radius: 5px;
     color: white;
     padding: 5px;
-    float: right;
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
@@ -18,6 +17,10 @@ input[type='submit'] {
 
 input[type='submit']:hover {
     background-color: rgb(106, 205, 110)
+}
+
+input[type="submit"]:disabled, input[type="submit"]:disabled:hover {
+    background: rgb(150, 150, 150)
 }
 
 /* ====================================================================================================
