--- a/custom/main/content/style.css
+++ b/custom/main/content/style.css
@@ -11,6 +11,7 @@ html, body {
     background-color: white;
     border-bottom: gray solid 1px;
 }
+
 h1 {
     font-size: 1.4em;
     font-weight: normal;
@@ -51,4 +52,8 @@ h3 {
 
 #view {
     background-color: darkgray;
+}
+
+#timeline {
+    height: 90%;
 }
