Add display name and title options to properties

--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -14,6 +14,14 @@ input[type='submit'] {
     margin: 4px 2px;
     cursor: pointer;
 }
+input[type='submit'].xyz-delete {
+    /*background-color: red;*/
+}
+
+input[type='submit'].xyz-edit {
+    /*background-color: orange;*/
+}
+
 
 input[type='submit']:hover {
     background-color: rgb(106, 205, 110)
