Fix css comment

--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -1,4 +1,4 @@
-// This file is created by gulpfile.js using the css definitions of engine/core and factory/css 
+/* This file is created by gulpfile.js using the css definitions of engine/core and factory/css */
 
 html, body {
     padding: 0;
