--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -175,6 +175,14 @@ div.xyz-timeline-label.xyz-list-selected {
     background-color: yellow;
 }
 
+div.xyz-timeline-line-creator {
+    position: absolute;
+    width:10px;
+    height:10px;
+    pointer-events: none;
+    cursor: none;
+    /*display: none;*/
+}
 
 
 div.xyz-timeline-line {
@@ -185,7 +193,29 @@ div.xyz-timeline-line {
     height: 100%;
     width:2px;
     background-color: black;
-}@charset "UTF-8";
+}
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
+}
+.xyz-login a {
+    color: blue;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.xyz-login a:hover {
+    text-decoration: underline;
+}
+@charset "UTF-8";
 
 /*!
  * Pikaday
@@ -424,28 +454,6 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}
-.xyz-login a {
-    color: blue;
-    cursor: pointer;
-    margin: 5px;
-}
-
-.xyz-login a:hover {
-    text-decoration: underline;
-}
 
 .xyz-reference {
     cursor: pointer;
