--- a/engine/core/types/file/file.css
+++ b/engine/core/types/file/file.css
@@ -2,6 +2,12 @@
 .xyz-file-container {
     background-color: darkgray;
     padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
 }
 
 .xyz-file-flat {
