--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -461,6 +461,21 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     text-decoration: underline;
 }
 
+.xyz-login-message {
+    background-color: khaki;
+    color: black;
+    border-radius: 5px;
+    text-align: center;
+    animation-iteration-count: 1;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes xyz-login-hide {
+    from {opacity:1.0;}
+    to {opacity:0.0;}
+}
+
 .xyz-reference {
     cursor: pointer;
 }
