--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -104,42 +104,6 @@ li.xyz-page-navigation-depth-0 {
     display: inline-block;
     float: left;
 }
-table.xyz-create, table.xyz-item, table.xyz-list {
-    /*border: 1px solid lightgrey;
-    margin-bottom: 5px;*/
-    padding: 0;
-    border-collapse: collapse;
-    table-layout: fixed;
-}
-
-table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
-    background: rgba(155, 155, 155, 0.2);
-}
-
-.xyz-create-header, .xyz-list-header, .xyz-item-header {
-    background-color: darkslateblue;
-    color: white;
-}
-
-.xyz-list, .xyz-item {
-    width: 100%;
-}
-
-.xyz-list-item {
-    cursor: pointer;
-}
-
-table.xyz-list tr.xyz-list-item:hover {
-    background-color: lightblue;
-}
-
-table.xyz-list tr.xyz-list-selected {
-    background-color: yellow;
-}.xyz-map-wrapper {
-  border-color: black;
-
-  /* b ackground-color: lightgreen; */
-}
 div.xyz-timeline-wrapper {
     position: relative;
     width: 100%;
@@ -199,6 +163,42 @@ div.xyz-timeline-line {
     height: 100%;
     width:2px;
     background-color: black;
+}.xyz-map-wrapper {
+  border-color: black;
+
+  /* b ackground-color: lightgreen; */
+}
+table.xyz-create, table.xyz-item, table.xyz-list {
+    /*border: 1px solid lightgrey;
+    margin-bottom: 5px;*/
+    padding: 0;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
+    background: rgba(155, 155, 155, 0.2);
+}
+
+.xyz-create-header, .xyz-list-header, .xyz-item-header {
+    background-color: darkslateblue;
+    color: white;
+}
+
+.xyz-list, .xyz-item {
+    width: 100%;
+}
+
+.xyz-list-item {
+    cursor: pointer;
+}
+
+table.xyz-list tr.xyz-list-item:hover {
+    background-color: lightblue;
+}
+
+table.xyz-list tr.xyz-list-selected {
+    background-color: yellow;
 }@charset "UTF-8";
 
 /*!
@@ -438,25 +438,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-    margin:0;
-    overflow:scroll;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    max-width: calc(100% - 20px);
-    max-height: calc(70vh - 20px);
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}.xyz-login a {
+.xyz-login a {
     color: blue;
     cursor: pointer;
     margin: 5px;
@@ -493,4 +475,22 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 
 .xyz-reference:hover {
     background-color: lightblue;
+}
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
 }
