--- a/engine/core/types/login/login.css
+++ b/engine/core/types/login/login.css
@@ -1,30 +1,35 @@
 .xyz-login a {
-    color: blue;
-    cursor: pointer;
-    margin: 5px;
+  color: blue;
+  cursor: pointer;
+  margin: 5px;
 }
 
 .xyz-login a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .xyz-login-message {
-    background-color: khaki;
-    color: black;
-    border-radius: 5px;
-    text-align: center;
-    animation-iteration-count: 1;
-    animation-duration: 10s;
-    animation-fill-mode: forwards;
+  background-color: khaki;
+  color: black;
+  border-radius: 5px;
+  text-align: center;
+  animation-iteration-count: 1;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes xyz-login-hide {
-    from {
-        visibility: visible;
-        opacity:1.0;
-    }
-    to {
-        visibility: hidden;
-        opacity:0.0;
-    }
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.xyz-login-capslock-notifier {
+  color: red;
 }
