--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -1,37 +1,6 @@
 /* This file is created by gulpfile.js using the css definitions of engine/core and factory/css */
 
-table.xyz-create, table.xyz-item, table.xyz-list {
-    /*border: 1px solid lightgrey;
-    margin-bottom: 5px;*/
-    padding: 0;
-    border-collapse: collapse;
-    table-layout: fixed;
-}
-
-table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
-    background: rgba(155, 155, 155, 0.2);
-}
-
-.xyz-create-header, .xyz-list-header, .xyz-item-header {
-    background-color: darkslateblue;
-    color: white;
-}
-
-.xyz-list, .xyz-item {
-    width: 100%;
-}
-
-.xyz-list-item {
-    cursor: pointer;
-}
-
-table.xyz-list tr.xyz-list-item:hover {
-    background-color: lightblue;
-}
-
-table.xyz-list tr.xyz-list-selected {
-    background-color: yellow;
-}html, body {
+html, body {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
@@ -135,7 +104,38 @@ li.xyz-page-navigation-depth-0 {
     display: inline-block;
     float: left;
 }
-.xyz-map-wrapper {
+table.xyz-create, table.xyz-item, table.xyz-list {
+    /*border: 1px solid lightgrey;
+    margin-bottom: 5px;*/
+    padding: 0;
+    border-collapse: collapse;
+    table-layout: fixed;
+}
+
+table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
+    background: rgba(155, 155, 155, 0.2);
+}
+
+.xyz-create-header, .xyz-list-header, .xyz-item-header {
+    background-color: darkslateblue;
+    color: white;
+}
+
+.xyz-list, .xyz-item {
+    width: 100%;
+}
+
+.xyz-list-item {
+    cursor: pointer;
+}
+
+table.xyz-list tr.xyz-list-item:hover {
+    background-color: lightblue;
+}
+
+table.xyz-list tr.xyz-list-selected {
+    background-color: yellow;
+}.xyz-map-wrapper {
   border-color: black;
 
   /* b ackground-color: lightgreen; */
@@ -438,44 +438,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-.xyz-login a {
-    color: blue;
-    cursor: pointer;
-    margin: 5px;
-}
 
-.xyz-login a:hover {
-    text-decoration: underline;
-}
-
-.xyz-login-message {
-    background-color: khaki;
-    color: black;
-    border-radius: 5px;
-    text-align: center;
-    animation-iteration-count: 1;
-    animation-duration: 10s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes xyz-login-hide {
-    from {
-        visibility: visible;
-        opacity:1.0;
-    }
-    to {
-        visibility: hidden;
-        opacity:0.0;
-    }
-}
-
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
-}
 .xyz-file-container {
     background-color: darkgray;
     padding: 10px;
@@ -493,4 +456,46 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     /*box-shadow: 2px 2px 2px;*/
     background-color: white;
     padding: 10px;
+}.xyz-login a {
+  color: blue;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.xyz-login a:hover {
+  text-decoration: underline;
+}
+
+.xyz-login-message {
+  background-color: khaki;
+  color: black;
+  border-radius: 5px;
+  text-align: center;
+  animation-iteration-count: 1;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes xyz-login-hide {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.xyz-login-capslock-notifier {
+  color: red;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
 }
