--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -135,12 +135,7 @@ table.xyz-list tr.xyz-list-item:hover {
 
 table.xyz-list tr.xyz-list-selected {
     background-color: yellow;
-}.xyz-map-wrapper {
-  border-color: black;
-
-  /* b ackground-color: lightgreen; */
-}
-div.xyz-timeline-wrapper {
+}div.xyz-timeline-wrapper {
     position: relative;
     width: 100%;
     height: 100%;
@@ -199,7 +194,12 @@ div.xyz-timeline-line {
     height: 100%;
     width:2px;
     background-color: black;
-}@charset "UTF-8";
+}.xyz-map-wrapper {
+  border-color: black;
+
+  /* b ackground-color: lightgreen; */
+}
+@charset "UTF-8";
 
 /*!
  * Pikaday
