Update selection in list, chart and timeline on variable change

--- a/engine/core/displays/list/list.css
+++ b/engine/core/displays/list/list.css
@@ -30,11 +30,11 @@ table.xyz-list tr:nth-child(even) {
   width: 100%;
 }
 
-.xyz-list-item {
+table.xyz-list tr.xyz-list-selectable {
   cursor: pointer;
 }
 
-table.xyz-list tr.xyz-list-item:hover {
+table.xyz-list tr.xyz-list-selectable:hover {
   background-color: lightblue;
 }
 
