--- a/engine/core/displays/map/map.css
+++ b/engine/core/displays/map/map.css
@@ -1,12 +1,13 @@
 .xyz-map-wrapper {
-  border-color: black;
-
-  /* b ackground-color: lightgreen; */
 }
 
 .ol-zoom-in,
-.ol-zoom-out {
-  float: right;
+.ol-zoom-out,
+.ol-zoom-fit {
+  height: 2em;
+  width: 2em;
+  margin: 2px;
+  float: left;
   background-color: darkslateblue;
   color: white;
   border: none;
