Add map selection

--- a/engine/core/displays/map/map.css
+++ b/engine/core/displays/map/map.css
@@ -25,6 +25,9 @@
 }
 
 .xyz-map-message {
+  pointer-events: none;
+  height: 100%;
+  width: 100%;
   position: absolute;
   z-index: 100;
   right: 0;
