--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -218,6 +218,9 @@ td.xyz-list-icon {
 }
 
 .xyz-map-message {
+  pointer-events: none;
+  height: 100%;
+  width: 100%;
   position: absolute;
   z-index: 100;
   right: 0;
